syntax = "proto3";

option go_package = "pkg/grpc/proto";
package currencies;

import "google/protobuf/timestamp.proto";

service CurrencyRatesService {
    rpc GetRateCurrentCommon (GetRateCurrentCommonRequest) returns (RateData) {}
    rpc GetRateByDateCommon (GetRateByDateCommonRequest) returns (RateData) {}

    rpc GetRateCurrentForMerchant (GetRateCurrentForMerchantRequest) returns (RateData) {}
    rpc GetRateByDateForMerchant (GetRateByDateForMerchantRequest) returns (RateData) {}

    rpc ExchangeCurrencyCurrentCommon (ExchangeCurrencyCurrentCommonRequest) returns (ExchangeCurrencyResponse) {}
    rpc ExchangeCurrencyCurrentForMerchant (ExchangeCurrencyCurrentForMerchantRequest) returns (ExchangeCurrencyResponse) {}

    rpc ExchangeCurrencyByDateCommon (ExchangeCurrencyByDateCommonRequest) returns (ExchangeCurrencyResponse) {}
    rpc ExchangeCurrencyByDateForMerchant (ExchangeCurrencyByDateForMerchantRequest) returns (ExchangeCurrencyResponse) {}

    rpc GetCommonRateCorrectionRule (CommonCorrectionRuleRequest) returns (CorrectionRule) {}
    rpc GetMerchantRateCorrectionRule (MerchantCorrectionRuleRequest) returns (CorrectionRule) {}

    rpc AddCommonRateCorrectionRule (CommonCorrectionRule) returns (EmptyResponse) {}
    rpc AddMerchantRateCorrectionRule (CorrectionRule) returns (EmptyResponse) {}

    rpc GetSupportedCurrencies (EmptyRequest) returns (CurrenciesList) {}

    rpc GetSettlementCurrencies (EmptyRequest) returns (CurrenciesList) {}

    rpc GetPriceCurrencies (EmptyRequest) returns (CurrenciesList) {}

    rpc GetVatCurrencies (EmptyRequest) returns (CurrenciesList) {}

    rpc GetAccountingCurrencies (EmptyRequest) returns (CurrenciesList) {}

    rpc GetCurrenciesPrecision (EmptyRequest) returns (CurrenciesPrecisionResponse) {}
}

message GetRateCurrentCommonRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbank stock cardpay"
    string rate_type = 3;
    //@inject_tag: validate:"omitempty,oneof=CBAU CBPL CBCA CBEU CBRF"
    string source = 4;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 5;
}

message GetRateByDateCommonRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbank stock cardpay"
    string rate_type = 3;
    //@inject_tag: validate:"omitempty,oneof=CBAU CBPL CBCA CBEU CBRF"
    string source = 4;
    //@inject_tag: validate:"required"
    google.protobuf.Timestamp datetime = 5;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 6;
}

message GetRateCurrentForMerchantRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbank stock cardpay"
    string rate_type = 3;
    //@inject_tag: validate:"omitempty,oneof=CBAU CBPL CBCA CBEU CBRF"
    string source = 4;
    //@inject_tag: validate:"omitempty,hexadecimal,len=24"
    string merchant_id = 5;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 6;
}

message GetRateByDateForMerchantRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbank stock cardpay"
    string rate_type = 3;
    //@inject_tag: validate:"omitempty,oneof=CBAU CBPL CBCA CBEU CBRF"
    string source = 4;
    //@inject_tag: validate:"required"
    google.protobuf.Timestamp datetime = 5;
    //@inject_tag: validate:"omitempty,hexadecimal,len=24"
    string merchant_id = 6;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 7;
}

message RateData {
    //@inject_tag: validate:"required,hexadecimal,len=24" json:"id" bson:"_id"
    string id = 1;
    //@inject_tag: validate:"required" json:"created_at" bson:"created_at"
    google.protobuf.Timestamp created_at = 2;
    //@inject_tag: validate:"required,alpha,len=6" json:"pair" bson:"pair"
    string pair = 3;
    //@inject_tag: validate:"required,numeric,gt=0" json:"rate" bson:"rate"
    double rate = 4;
    //@inject_tag: validate:"required,alpha" json:"source" bson:"source"
    string source = 5;
    //@inject_tag: validate:"numeric" json:"volume" bson:"volume"
    double volume = 6;
}

message CardpayRate {
    //@inject_tag: validate:"required" json:"created_at" bson:"created_at"
    google.protobuf.Timestamp created_at = 1;
    //@inject_tag: validate:"required,alpha,len=3" json:"from" bson:"from"
    string from = 2;
    //@inject_tag: validate:"required,alpha,len=3" json:"to" bson:"to"
    string to = 3;
    //@inject_tag: validate:"required,numeric,gt=0" json:"rate" bson:"rate"
    double rate = 4;
    //@inject_tag: validate:"required,alpha" json:"source" bson:"source"
    string source = 5;
    //@inject_tag: validate:"numeric" json:"volume" bson:"volume"
    double volume = 6;
}

message EmptyResponse {
}

message EmptyRequest {
}

message CorrectionCorridor {
    //@inject_tag: validate:"required,numeric,gte=0,lte=1"
    double value = 1;
}

message CorrectionRule {
    // @inject_tag: validate:"required,hexadecimal,len=24" json:"id" bson:"_id"
    string id = 1;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbanks stock cardpay" json:"rate_type" bson:"rate_type"
    string rate_type = 2;
    // @inject_tag: validate:"omitempty,numeric,gte=0,lte=100" json:"common_correction" bson:"common_correction"
    double common_correction = 3;
    // @inject_tag: validate:"omitempty,dive,keys,alpha,len=6,endkeys,gte=0,lte=100" json:"pair_correction" bson:"pair_correction"
    map<string, double> pair_correction = 4;
    // @inject_tag: validate:"required" json:"created_at"  bson:"created_at"
    google.protobuf.Timestamp created_at = 5;
    //@inject_tag: validate:"omitempty,hexadecimal,len=24" json:"merchant_id" bson:"merchant_id"
    string merchant_id = 6;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 7;
}

message CommonCorrectionRule {
    // @inject_tag: validate:"required,hexadecimal,len=24" json:"id" bson:"_id"
    string id = 1;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbanks stock cardpay" json:"rate_type" bson:"rate_type"
    string rate_type = 2;
    // @inject_tag: validate:"omitempty,numeric,gte=0,lte=100" json:"common_correction" bson:"common_correction"
    double common_correction = 3;
    // @inject_tag: validate:"omitempty,dive,keys,alpha,len=6,endkeys,gte=0,lte=100" json:"pair_correction" bson:"pair_correction"
    map<string, double> pair_correction = 4;
    // @inject_tag: validate:"required" json:"created_at"  bson:"created_at"
    google.protobuf.Timestamp created_at = 5;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 6;
}

message CommonCorrectionRuleRequest {
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbank stock cardpay"
    string rate_type = 1;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 2;
}

message MerchantCorrectionRuleRequest {
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbank stock cardpay"
    string rate_type = 1;
    //@inject_tag: validate:"omitempty,hexadecimal,len=24"
    string merchant_id = 2;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 3;
}

message ExchangeCurrencyCurrentCommonRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbanks stock cardpay"
    string rate_type = 3;
    string source = 4;
    // @inject_tag: validate:"numeric,gte=0"
    double amount = 5;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 6;
}

message ExchangeCurrencyCurrentForMerchantRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbanks stock cardpay"
    string rate_type = 3;
    //@inject_tag: validate:"omitempty,oneof=CBAU CBPL CBCA CBEU CBRF"
    string source = 4;
    // @inject_tag: validate:"numeric,gte=0"
    double amount = 5;
    //@inject_tag: validate:"omitempty,hexadecimal,len=24"
    string merchant_id = 6;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 7;
}

message ExchangeCurrencyByDateCommonRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbanks stock cardpay"
    string rate_type = 3;
    //@inject_tag: validate:"omitempty,oneof=CBAU CBPL CBCA CBEU CBRF"
    string source = 5;
    // @inject_tag: validate:"numeric,gte=0"
    double amount = 6;
    //@inject_tag: validate:"required"
    google.protobuf.Timestamp datetime = 7;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 8;
}

message ExchangeCurrencyByDateForMerchantRequest {
    //@inject_tag: validate:"required,alpha,len=3"
    string from = 1;
    //@inject_tag: validate:"required,alpha,len=3"
    string to = 2;
    //@inject_tag: validate:"required,oneof=oxr paysuper centralbanks stock cardpay"
    string rate_type = 3;
    //@inject_tag: validate:"omitempty,oneof=CBAU CBPL CBCA CBEU CBRF"
    string source = 4;
    // @inject_tag: validate:"numeric,gte=0"
    double amount = 5;
    //@inject_tag: validate:"omitempty,hexadecimal,len=24"
    string merchant_id = 6;
    //@inject_tag: validate:"required"
    google.protobuf.Timestamp datetime = 7;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 9;
}

message ExchangeCurrencyResponse {
    // @inject_tag: validate:"numeric,gte=0"
    double exchanged_amount = 1;
    //@inject_tag: validate:"required,numeric,gt=0" json:"rate" bson:"exchange_rate"
    double exchange_rate = 2;
    // @inject_tag: validate:"omitempty,numeric,gte=-100,lte=100" json:"correction"
    double correction = 3;
    //@inject_tag: validate:"required,numeric,gt=0" json:"original_rate"
    double original_rate = 4;
    // @inject_tag: validate:"required,oneof=sell buy" json:"exchange_direction" bson:"exchange_direction"
    string exchange_direction = 5;
}

message CurrenciesList {
    repeated string currencies = 1;
}

message CurrenciesPrecisionResponse {
    map<string, int32> values = 1;
}

